# ProjectTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh
.github/workflows/: HW4.yml  main.yml
include/: header.h
libs/lib1/: CMakeLists.txt
libs/lib1/include/lib1/: lib1.h
src/: main.cpp
tests/: CMakeLists.txt  lib1tests.cpp  test.cpp
